--- a/gw2itemsearch.html
+++ b/gw2itemsearch.html
@@ -2,8 +2,9 @@
 <html dir="ltr" lang="de" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta charset="UTF-8"/>
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<link rel="alternate" type="application/rss+xml" title="Recently added items" href="http://gw2wbot.darthmaim.de/rss/newItems/" />
+	<link rel="alternate" type="application/rss+xml" title="Recently renamed items" href="http://gw2wbot.darthmaim.de/rss/renamedItems/" />
 	<title>GW2 Item Search</title>
 	<style>
 		body { font-size:14px; line-height:1.4em; font-family:"Trebuchet MS",sans-serif; color:#000; min-width: 1000px;}
@@ -58,12 +59,6 @@
 		.ascended { color: #fb3e8d; }
 		.legendary { color: #800080; }
 	</style>
-	<!--[if lte IE 9]>
-	<style type="text/css">
-		.chromeFrameOverlayUnderlay{ background-color:#000; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; filter:alpha(opacity=50); }
-		.chromeFrameOverlayContent{ width:800px; }
-	</style>
-	<![endif]-->
 </head>
 <body>
 <form id="gw2_search">
@@ -125,150 +120,155 @@
 </form>
 <div id="results"></div>
 <footer>
-	GW2 Item Search by <a target="_blank" href="http://wiki-de.guildwars2.com/wiki/Benutzer:Smiley">Smiley&trade;</a> (<a target="_blank" href="https://github.com/codemasher/gw2api-tools">GitHub repo</a>)<br />
+	GW2 Item Search by <a target="_blank" href="http://wiki-de.guildwars2.com/wiki/Benutzer:Smiley">Smiley&trade;</a> (<a target="_blank" href="https://github.com/codemasher/gw2-database/">GitHub repo</a>)<br />
 	hosted by <a target="_blank" href="http://wiki-de.guildwars2.com/wiki/Benutzer:Darthmaim">Darthmaim</a>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
-<!--[if lte IE 9]>
-<script src="https://ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-<script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"});});</script>
-<![endif]-->
 <script>
-	var types = {
-		Armor: ["Boots", "Coat", "Gloves", "Helm", "HelmAquatic", "Leggings", "Shoulders"],
-		Back: [],
-		Bag: [],
-		Consumable: ["AppearanceChange", "Booze", "ContractNpc", "Food", "Generic", "Halloween", "Immediate", "Transmutation", "Unknown", "Unlock", "Utility"],
-		Container: ["Default", "GiftBox"],
-		CraftingMaterial: [],
-		Gathering: ["Foraging", "Logging", "Mining"],
-		Gizmo:["Default", "RentableContractNpc", "UnlimitedConsumable"],
-		MiniPet: [],
-		Tool: ["Salvage"],
-		Trinket: ["Accessory", "Amulet", "Ring"],
-		Trophy: [],
-		UpgradeComponent: ["Default", "Gem", "Rune", "Sigil"],
-		Weapon: ["Axe", "Dagger", "Focus", "Greatsword", "Hammer", "Harpoon", "LargeBundle", "LongBow", "Mace", "Pistol", "Rifle", "Scepter", "Shield", "ShortBow", "Speargun", "Staff", "Sword", "Torch", "Toy", "Trident", "TwoHandedToy", "Warhorn"]
-	};
+	(function(){
+		var types = {
+			Armor: ["Boots", "Coat", "Gloves", "Helm", "HelmAquatic", "Leggings", "Shoulders"],
+			Back: [],
+			Bag: [],
+			Consumable: ["AppearanceChange", "Booze", "ContractNpc", "Food", "Generic", "Halloween", "Immediate", "Transmutation", "Unknown", "Unlock", "Utility"],
+			Container: ["Default", "GiftBox"],
+			CraftingMaterial: [],
+			Gathering: ["Foraging", "Logging", "Mining"],
+			Gizmo:["Default", "RentableContractNpc", "UnlimitedConsumable"],
+			MiniPet: [],
+			Tool: ["Salvage"],
+			Trinket: ["Accessory", "Amulet", "Ring"],
+			Trophy: [],
+			UpgradeComponent: ["Default", "Gem", "Rune", "Sigil"],
+			Weapon: ["Axe", "Dagger", "Focus", "Greatsword", "Hammer", "Harpoon", "LargeBundle", "LongBow", "Mace", "Pistol", "Rifle", "Scepter", "Shield", "ShortBow", "Speargun", "Staff", "Sword", "Torch", "Toy", "Trident", "TwoHandedToy", "Warhorn"]
+		};
 
-	$("gw2_search").observe("submit", function(e){
-		Event.stop(e);
-		itemSearch(1);
-	});
-
-	$("search").observe("keyup", function(){
-		itemSearch(1);
-	});
-
-	$("type").observe("change", function(){
-		$("subtype").update(new Element("option", {"value":""}).update("-- subtype --"));
-		types[this.value].each(function(t){
-			$("subtype").insert(new Element("option", {"value":t}).update(t));
-		});
-	});
-
-	$$(".options").invoke("observe", "change", function(){
-		itemSearch(1);
-	});
-
-	function itemSearch(page){
-		new Ajax.Request("gw2itemsearch.php",{
-			method:"post",
-			// base64_encode the search string to not break umlauts, accented chars etc.
-			parameters:{search:Object.toJSON({str:base64_encode($F("search")), form:$("gw2_search").serialize(true), p:page, id:($$("#resultlist > .selected")[0] ? $$("#resultlist > .selected")[0].dataset.id : null)})},
-			onSuccess:function(r){
-				$("results").update(r.responseText);
-				observeResults();
-			}
-		});
-	}
-
-	function observeResults(){
-		$$(".p-links").invoke("stopObserving").invoke("observe","click", function(e){
+		$("gw2_search").observe("submit", function(e){
 			Event.stop(e);
-			itemSearch(this.dataset.page);
+			itemSearch();
 		});
-		$("resultlist").childElements().invoke("stopObserving").invoke("observe", "click", function(){
-			$$("#resultlist > .selected").invoke("removeClassName", "selected");
-			this.addClassName("selected");
-			getDetails(this.dataset.id);
-		});
-	}
 
-	function getDetails(item_id){
-		new Ajax.Request("gw2itemsearch.php",{
-			parameters:{details:Object.toJSON({id:item_id, lang:$$("input[name=lang]:checked")[0].value})},
-			onSuccess: function(r){
-				$("details").update(r.responseText);
-				$$(".selectable").invoke("stopObserving").invoke("observe", "click", function(){
-					this.select();
-				});
-				$("refresh").stopObserving().observe("click", function(e){
-					Event.stop(e);
-					new Ajax.Request("gw2itemsearch.php",{
-						parameters:{refresh:this.dataset.id},
-						onLoading: function(){
-							$("msg").update();
-							if(!$("indicator")){
-								$("refresh").insert({after: new Element("img", {"id":"indicator","src":"icons/spinner.gif"})});
-							}
-							else{
-								$("indicator").src = "icons/spinner.gif";
-							}
-						},
-						onSuccess: function(re){
-							if(re.responseJSON.success){
-								$("indicator").src = "icons/tick.png";
-							}
-							else if(re.responseJSON.error){
-								$("indicator").src = "icons/cross.png";
-							}
-							$("msg").update(re.responseJSON.message);
-							getDetails.delay(2, item_id);
-						}
-					});
+		$("search").observe("keyup", function(){
+			itemSearch();
+		});
+
+		$("type").observe("change", function(){
+			$("subtype").update(new Element("option", {"value":""}).update("-- subtype --"));
+			if(types[this.value]){
+				types[this.value].each(function(t){
+					$("subtype").insert(new Element("option", {"value":t}).update(t));
 				});
 			}
 		});
-	}
 
-	function base64_encode(data){
-		// http://phpjs.org/functions/base64_encode/
-		// http://kevin.vanzonneveld.net
-		// +   original by: Tyler Akins (http://rumkin.com)
-		// +   improved by: Bayron Guevara
-		// +   improved by: Thunder.m
-		// +   improved by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
-		// +   bugfixed by: Pellentesque Malesuada
-		// +   improved by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
-		// +   improved by: Rafał Kukawski (http://kukawski.pl)
-		// *     example 1: base64_encode('Kevin van Zonneveld');
-		// *     returns 1: 'S2V2aW4gdmFuIFpvbm5ldmVsZA=='
-		// mozilla has this native
-		// - but breaks in 2.0.0.12!
-		//if (typeof this.window['btoa'] === 'function') {
-		//    return btoa(data);
-		//}
-		var b64 = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",
-			o1, o2, o3, h1, h2, h3, h4, bits, i = 0, ac = 0, enc, tmp_arr = [];
-		if(!data){return data;}
-		do{ // pack three octets into four hexets
-			o1 = data.charCodeAt(i++);
-			o2 = data.charCodeAt(i++);
-			o3 = data.charCodeAt(i++);
-			bits = o1 << 16|o2 << 8|o3;
-			h1 = bits >> 18&0x3f;
-			h2 = bits >> 12&0x3f;
-			h3 = bits >> 6&0x3f;
-			h4 = bits&0x3f;
-			// use hexets to index into b64, and append result to encoded string
-			tmp_arr[ac++] = b64.charAt(h1)+b64.charAt(h2)+b64.charAt(h3)+b64.charAt(h4);
+		$$(".options").invoke("observe", "change", function(){
+			itemSearch();
+		});
+
+		function itemSearch(page){
+			page = page || 1;
+			new Ajax.Request("gw2itemsearch.php",{
+				method:"post",
+				// base64_encode the search string to not break umlauts, accented chars etc.
+				parameters:{search:Object.toJSON({str:base64_encode($F("search")), form:$("gw2_search").serialize(true), p:page, id:($$("#resultlist > .selected")[0] ? $$("#resultlist > .selected")[0].dataset.id : null)})},
+				onSuccess:function(r){
+					$("results").update(r.responseText);
+					observeResults();
+				}
+			});
 		}
-		while(i < data.length);
-		enc = tmp_arr.join('');
-		var r = data.length%3;
-		return (r ? enc.slice(0, r-3) : enc)+'==='.slice(r || 3);
-	}
+
+		function observeResults(){
+			$$(".p-links").invoke("stopObserving").invoke("observe","click", function(e){
+				Event.stop(e);
+				itemSearch(this.dataset.page);
+			});
+			$("resultlist").childElements().invoke("stopObserving").invoke("observe", "click", function(){
+				$$("#resultlist > .selected").invoke("removeClassName", "selected");
+				this.addClassName("selected");
+				getDetails(this.dataset.id);
+			});
+		}
+
+		function getDetails(item_id){
+			new Ajax.Request("gw2itemsearch.php",{
+				parameters:{details:Object.toJSON({id:item_id, lang:$$("input[name=lang]:checked")[0].value})},
+				onSuccess: function(r){
+					$("details").update(r.responseText);
+					$$(".selectable").invoke("stopObserving").invoke("observe", "click", function(){
+						this.select();
+					});
+					$("refresh").stopObserving().observe("click", function(e){
+						Event.stop(e);
+						new Ajax.Request("gw2itemsearch.php",{
+							parameters:{refresh:this.dataset.id},
+							onLoading: function(){
+								$("msg").update();
+								if(!$("indicator")){
+									$("refresh").insert({after: new Element("img", {"id":"indicator","src":"icons/spinner.gif"})});
+								}
+								else{
+									$("indicator").src = "icons/spinner.gif";
+								}
+							},
+							onSuccess: function(re){
+								if(re.responseJSON.success){
+									$("indicator").src = "icons/tick.png";
+								}
+								else if(re.responseJSON.error){
+									$("indicator").src = "icons/cross.png";
+								}
+								$("msg").update(re.responseJSON.message);
+								getDetails.delay(2, item_id);
+							}
+						});
+					});
+				}
+			});
+		}
+
+		function base64_encode(data){
+			// http://phpjs.org/functions/base64_encode/
+			// http://kevin.vanzonneveld.net
+			// +   original by: Tyler Akins (http://rumkin.com)
+			// +   improved by: Bayron Guevara
+			// +   improved by: Thunder.m
+			// +   improved by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+			// +   bugfixed by: Pellentesque Malesuada
+			// +   improved by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+			// +   improved by: Rafał Kukawski (http://kukawski.pl)
+			// *     example 1: base64_encode('Kevin van Zonneveld');
+			// *     returns 1: 'S2V2aW4gdmFuIFpvbm5ldmVsZA=='
+			// mozilla has this native
+			// - but breaks in 2.0.0.12!
+			//if (typeof this.window['btoa'] === 'function') {
+			//    return btoa(data);
+			//}
+			var b64 = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",
+					o1, o2, o3, h1, h2, h3, h4, bits, i = 0, ac = 0, enc, tmp_arr = [];
+			if(!data){return data;}
+			do{ // pack three octets into four hexets
+				o1 = data.charCodeAt(i++);
+				o2 = data.charCodeAt(i++);
+				o3 = data.charCodeAt(i++);
+				bits = o1 << 16|o2 << 8|o3;
+				h1 = bits >> 18&0x3f;
+				h2 = bits >> 12&0x3f;
+				h3 = bits >> 6&0x3f;
+				h4 = bits&0x3f;
+				// use hexets to index into b64, and append result to encoded string
+				tmp_arr[ac++] = b64.charAt(h1)+b64.charAt(h2)+b64.charAt(h3)+b64.charAt(h4);
+			}
+			while(i < data.length);
+			enc = tmp_arr.join('');
+			var r = data.length%3;
+			return (r ? enc.slice(0, r-3) : enc)+'==='.slice(r || 3);
+		}
+
+	})();
+
+	// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	// ga("create","");ga("send","pageview");ga("set","anonymizeIp",true);
 </script>
 </body>
 </html>
